[tool.poetry]
name = "five_addr"
version = "0.1.0"
description = "五级地址爬取"
authors = ["hai <hilin2333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pymongo = "^3.11.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
